<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/_minus10sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_60sdp"
                android:src="@drawable/app_logo_instrutions" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_msg_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:paddingTop="@dimen/_20sdp"
                android:paddingBottom="@dimen/_30sdp"
                android:src="@drawable/ic_app_maintainence" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_minus2sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:background="@drawable/bg_ll_maintanance"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_logo"
        app:layout_constraintVertical_weight="1.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20sdp">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/ll_nested"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/btn_update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_weight="1">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guidelineLeft"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="@dimen/_30sdp" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideLineEnd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="@dimen/_30sdp" />

                    <TextView
                        android:id="@+id/tv_app_instructions"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/inter_bold"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/guideLineEnd"
                        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_weight="1" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_app_permission"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toStartOf="@id/guideLineEnd"
                        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                        app:layout_constraintTop_toTopOf="parent">


                        <LinearLayout
                            android:id="@+id/ll_camera"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:orientation="vertical"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_bold"
                                android:text="@string/str_permission_list_details"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12sdp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_2sdp"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:background="@drawable/bg_driver_permisstion" />


                            <TextView
                                android:id="@+id/tvCamera"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_bold"
                                android:text="@string/str_camera"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12sdp" />

                            <TextView
                                android:id="@+id/tvCameraNote"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_3sdp"
                                android:fontFamily="@font/inter_regular"
                                android:text="@string/str_camera_details"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_10sdp" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_2sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:background="@drawable/bg_driver_permisstion"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/ll_camera" />

                        <LinearLayout
                            android:id="@+id/ll_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:orientation="vertical"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/ll_camera">

                            <TextView
                                android:id="@+id/tvLocation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_bold"
                                android:text="@string/str_location_access"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12sdp" />

                            <TextView
                                android:id="@+id/tvLocationNote"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_3sdp"
                                android:fontFamily="@font/inter_regular"
                                android:text="@string/str_location_details"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_10sdp" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_2sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:background="@drawable/bg_driver_permisstion"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/ll_location" />

                        <LinearLayout
                            android:id="@+id/ll_notification"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:orientation="vertical"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/ll_location">

                            <TextView
                                android:id="@+id/tvNotification"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_bold"
                                android:text="@string/str_notification"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12sdp" />

                            <TextView
                                android:id="@+id/tvNotificationNote"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_3sdp"
                                android:fontFamily="@font/inter_regular"
                                android:text="@string/str_notification_details"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_10sdp" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_2sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:background="@drawable/bg_driver_permisstion"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/ll_notification" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.core.widget.NestedScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/white"
                android:padding="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_nested"
                app:layout_constraintVertical_weight="1">

                <TextView
                    android:id="@+id/txt_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/str_get_started"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:background="@drawable/bg_title_maintenance"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/ll_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout">

        <View
            android:id="@+id/line1"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/dot1"
            android:layout_width="@dimen/_8sdp"
            android:layout_height="@dimen/_8sdp"
            android:background="@drawable/bg_dot_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/line1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:ellipsize="end"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:maxLines="3"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:text="@string/str_app_permission"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/dot2"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/dot1"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/dot2"
            android:layout_width="@dimen/_8sdp"
            android:layout_height="@dimen/_8sdp"
            android:background="@drawable/bg_dot_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/line2"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line2"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>