<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/rel_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/icn_back" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_50sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/logo_white" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_minus10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/layout_registratin"
            android:orientation="vertical"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/mont_semibold"
                        android:text="One time registration"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_cmp_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mont_medium"
                            android:hint="@string/enter_company_name"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:maxLength="80"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mont_medium"
                            android:hint="@string/enter_email_id"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:maxLength="80"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789"
                            android:fontFamily="@font/mont_medium"
                            android:hint="@string/enter_mobile_number"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mont_medium"
                            android:hint="@string/enter_password"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:inputType="textPassword"
                            android:maxLength="40"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mont_medium"
                            android:hint="@string/enter_confirm_password"
                            android:imeOptions="actionDone"
                            android:importantForAutofill="no"
                            android:inputType="textPassword"
                            android:maxLength="40"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/chk_terms"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="center_vertical"
                            android:buttonTint="@color/colorPrimary"
                            android:fontFamily="@font/mont_medium"
                            android:gravity="center_vertical"
                            android:padding="@dimen/_2sdp" />

                        <TextView
                            android:id="@+id/txt_terms_conditions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mont_medium"
                            android:padding="@dimen/_5sdp"
                            android:textColorLink="@color/colorPrimary"
                            android:textSize="@dimen/_12sdp" />


                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/rel_continue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/bg_btn_continue"
                        android:padding="@dimen/_8sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:drawableEnd="@drawable/ic_forward_arrow"
                            android:drawablePadding="@dimen/_10sdp"
                            android:text="Continue"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/txt_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:fontFamily="@font/mont_medium"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />


                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>